fix(runtime): adiciona --add-opens para Tomcat no Java 17